# Chat_Service

./: .gitignore  CMakeCache.txt  CMakeLists.txt  chat_service_client.c  chat_service_client.h  chat_service_server.c  chat_service_server.h  client.c  client_spam.sh  error_handling.c  error_handling.h  first_message_before_exit.txt  main.c  server.c
pdu_handler/: pdu_handler_client-nameserver.c  pdu_handler_client-nameserver.h  pdu_handler_client-server.c  pdu_handler_client-server.h  pdu_handler_server-nameserver.c  pdu_handler_server-nameserver.h  pdu_helper.c  pdu_helper.h  pdu_join_tests.c  pdu_mess_tests.c  pdu_particpants_tests.c  pdu_tests.c  pdu_tests.h  test_pdu_handler_server-nameserver.c  test_pdu_handler_server-nameserver.h
pdu_handler/client-nameserver/: pdu_handler_client-nameserver.c  pdu_handler_client-nameserver.h  s_list_data.pdu  test_pdu_handler_client-nameserver.c  test_pdu_handler_client-nameserver.h
pdu_handler/client-nameserver/test_client-nameserver/: s_list_data.pdu  test_pdu_handler_client-nameserver.c
pdu_handler/client-server/: pdu_handler_client-server.c  pdu_handler_client-server.h  pdu_join_tests.h  pdu_mess_tests.c  pdu_particpants_tests.h  pdu_pleave_tests.c  pdu_quit_tests.c
pdu_handler/client-server/pdu_join_test/: data.pdu  pdu_join_tests.c
pdu_handler/client-server/pdu_mess_test/: data.pdu  pdu_mess_tests.c  pdu_mess_tests.h
pdu_handler/client-server/pdu_participants_test/: data.pdu  pdu_particpants_tests.c  pdu_particpants_tests.h
pdu_handler/client-server/pdu_pjoin_test/: data.pdu  pdu_pjoin_tests.c  pdu_pjoin_tests.h
pdu_handler/client-server/pdu_pleave_test/: pdu_pleave_tests.c  pdu_pleave_tests.h  pleave_data.pdu
pdu_handler/client-server/pdu_quit_test/: pdu_quit_tests.c  pdu_quit_tests.h
pdu_handler/server-nameserver/: pdu_handler_server-nameserver.c  pdu_handler_server-nameserver.h  reg_data.pdu  test_pdu_handler_server-nameserver.c
pdu_handler/server-nameserver/test_server-nameserver/: ack_data.pdu  alive_data.pdu  not_reg_data.pdu  test_pdu_handler_server-nameserver.c  test_pdu_handler_server-nameserver.h
socket_handler/: client_list.c  client_list.h  network_helper.c  network_helper.h  queue.c  queue.h  socket_helper.c  socket_helper.h  socket_interface.c  socket_interface.h  socket_interface_test.c  socket_interface_test.h
